MD Buttons: Don't add layers for hidden -> hidden transitions.

InkDropHostView::VisibilityChanged() is invoked when never-transitioned
(or even never-shown) views are set hidden. This can happen with calls
to View::SetVisibility(false), Widget::SetVisible(false) or
Widget::Close*(). These Views may never be shown, so don't add a layer
to animate ink drops in these cases.

BUG=619798

Review-Url: https://chromiumcodereview.appspot.com/2431493002
Cr-Commit-Position: refs/heads/master@{#426345}

Former-commit-id: 2cb97f14a013d26b5139d2144537d591181a7f4e